package practice.after;

public class Atom extends Robot {

    public Atom(String name) {
        super(name);
    }

}
